feat: add terraform to main pipeline

--- a/.github/workflows/deploy-to-gcp.yml
+++ b/.github/workflows/deploy-to-gcp.yml
@@ -6,7 +6,7 @@ on:
       commit-sha:
         description: 'Image tag to deploy'
         required: true
-        default: '???'
+        default: 'sha-<7-chars>'
 
 jobs:
   terraform:
