feat: update pipeline

--- a/.github/workflows/deploy-to-gcp.yml
+++ b/.github/workflows/deploy-to-gcp.yml
@@ -9,8 +9,7 @@ on:
         default: 'sha-<7-chars>'
 
 jobs:
-  terraform:
-    name: 'apply terraform config'
+  deploy-to-gcp:
     runs-on: ubuntu-latest
     environment: oskar-westmeijer-environment
 
