--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -55,7 +55,7 @@ jobs:
         cache: maven
     - run: |
         chmod +x mvnw 
-        ./mvnw clean verify
+        ./mvnw clean package
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
