feat: move terraform fmt to beginning of pipeline

--- a/.github/workflows/main-test-release-deploy.yml
+++ b/.github/workflows/main-test-release-deploy.yml
@@ -5,6 +5,21 @@ on:
     branches:
       - main
 jobs:
+  terraform-fmt:
+    runs-on: ubuntu-latest
+    environment: oskar-westmeijer-environment
+    defaults:
+      run:
+        shell: bash
+        working-directory: terraform
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+      - name: Terraform Format
+        run: terraform fmt -check
+
   build-and-test:
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +40,7 @@ jobs:
           retention-days: 1
 
   release-docker-image:
-    needs: [ build-and-test ]
+    needs: [ terraform-fmt, build-and-test ]
     runs-on: ubuntu-latest
     environment: oskar-westmeijer-environment
     steps:
@@ -80,17 +95,6 @@ jobs:
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_INFRA_SERVICE_ACCOUNT }}
 
-      - name: Terraform Format
-        run: terraform fmt -check
-
-      - name: Terraform Plan
-        run: terraform plan
-        env:
-          TF_VAR_service_image: ${{ secrets.DOCKER_USERNAME }}/gcp-spring-boot-sample:sha-${{ steps.commitsha.outputs.sha_short }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GCP_INFRA_SERVICE_ACCOUNT }}
-
-        # On push to main, build or change infrastructure according to Terraform configuration files
-        # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
       - name: Terraform Apply
         run: terraform apply -auto-approve
         env:
