--- a/.github/workflows/main-test-release-deploy.yml
+++ b/.github/workflows/main-test-release-deploy.yml
@@ -5,20 +5,6 @@ on:
     branches:
       - main
 jobs:
-  terraform-fmt:
-    runs-on: ubuntu-latest
-    environment: oskar-westmeijer-environment
-    defaults:
-      run:
-        shell: bash
-        working-directory: terraform
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-      - name: Terraform Format
-        run: terraform fmt -check
 
   build-and-test:
     runs-on: ubuntu-latest
@@ -38,6 +24,26 @@ jobs:
           name: app-jar
           path: target/app.jar
           retention-days: 1
+
+  terraform-check:
+    runs-on: ubuntu-latest
+    environment: oskar-westmeijer-environment
+    defaults:
+      run:
+        shell: bash
+        working-directory: terraform
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+      - name: Terraform Format
+        run: terraform fmt -recursive -check
+      - name: Terraform Validate
+        run: terraform validate
+
+  codeql-check:
+    uses: OskarWestmeijer/gcp-spring-boot-sample/.github/workflows/codeql.yml@main
 
   release-docker-image:
     needs: [ terraform-fmt, build-and-test ]
