--- a/.github/workflows/main-test-release-deploy.yml
+++ b/.github/workflows/main-test-release-deploy.yml
@@ -43,7 +43,11 @@ jobs:
         run: terraform validate
 
   codeql-check:
-    uses: OskarWestmeijer/gcp-spring-boot-sample/.github/workflows/codeql.yml@main
+    uses: ./.github/workflows/codeql.yml@main
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
   release-docker-image:
     needs: [ build-and-test, terraform-check, codeql-check ]
