--- a/.github/workflows/deploy-to-gcp.yml
+++ b/.github/workflows/deploy-to-gcp.yml
@@ -1,6 +1,14 @@
 name: 'deploy-gcp-project-infrastructure'
 
 on:
+  workflow_call:
+    inputs:
+      commit-sha:
+        description: 'Image tag to deploy'
+        required: true
+        type: string
+        default: 'sha-<7-chars>'
+
   workflow_dispatch:
     inputs:
       commit-sha:
@@ -30,17 +38,8 @@ jobs:
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_INFRA_SERVICE_ACCOUNT }}
 
-      - name: Terraform Format
-        run: terraform fmt -check
-
-      - name: Terraform Plan
-        run: terraform plan
-        env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GCP_INFRA_SERVICE_ACCOUNT }}
-
-        # On push to main, build or change infrastructure according to Terraform configuration files
-        # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
       - name: Terraform Apply
         run: terraform apply -auto-approve
         env:
+          TF_VAR_service_image: ${{ secrets.DOCKER_USERNAME }}/gcp-spring-boot-sample:sha-${{ inputs.commit-sha }}
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_INFRA_SERVICE_ACCOUNT }}
