feat: tag with long sha

--- a/.github/workflows/main-test-release-deploy.yml
+++ b/.github/workflows/main-test-release-deploy.yml
@@ -76,7 +76,7 @@ jobs:
           tags: |
             # set latest tag for master branch
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-            type=sha
+            type=sha,format=long
       - name: build and push backend image
         uses: docker/build-push-action@v3
         with:
