--- a/.github/workflows/build-test-release-deploy.yml
+++ b/.github/workflows/build-test-release-deploy.yml
@@ -72,6 +72,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: oskar-westmeijer-environment
     if: github.ref == 'refs/heads/main'
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     steps:
       - uses: actions/checkout@v3
       - name: login to DockerHub
@@ -106,8 +110,6 @@ jobs:
           output: 'trivy-image-results.sarif'
           #          exit-code: '1'
           ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
       - name: upload trivy image scan results to GitHub security tab
         uses: github/codeql-action/upload-sarif@v2
         with:
