--- a/.github/workflows/build-test-release-deploy.yml
+++ b/.github/workflows/build-test-release-deploy.yml
@@ -51,9 +51,39 @@ jobs:
       contents: read
       security-events: write
 
+  trivy-image-check:
+    runs-on: ubuntu-latest
+    needs: [ build-and-test ]
+    environment: oskar-westmeijer-environment
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: app-jar
+          path: target
+      - name: build image
+        run: |
+          docker build -t '${{ secrets.DOCKER_USERNAME }}/gcp-spring-boot-sample:sha-${{ github.sha }} .
+      - name: trivy image scan
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ secrets.DOCKER_USERNAME }}/gcp-spring-boot-sample:sha-${{ github.sha }}'
+          format: 'sarif'
+          output: 'trivy-image-results.sarif'
+          ignore-unfixed: true
+      - name: upload trivy image scan results to GitHub security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-image-results.sarif'
+          category: 'image'
+
   dependabot-automerge:
     needs: [ build-and-test, terraform-check, codeql-check ]
     runs-on: ubuntu-latest
+    environment: oskar-westmeijer-environment
     if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'}}
     steps:
       - name: Dependabot metadata
@@ -102,24 +132,10 @@ jobs:
           context: .
           load: true
           tags: ${{ steps.meta.outputs.tags }}
-      - name: trivy image scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: '${{ secrets.DOCKER_USERNAME }}/gcp-spring-boot-sample:sha-${{ github.sha }}'
-          format: 'sarif'
-          output: 'trivy-image-results.sarif'
-          #          exit-code: '1'
-          ignore-unfixed: true
-      - name: upload trivy image scan results to GitHub security tab
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: 'trivy-image-results.sarif'
-          category: 'image'
       - name: push image
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
 
