--- a/.github/workflows/build-test-release-deploy.yml
+++ b/.github/workflows/build-test-release-deploy.yml
@@ -60,6 +60,8 @@ jobs:
       contents: read
       security-events: write
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
           name: app-jar
