--- a/.github/workflows/build-test-release-deploy.yml
+++ b/.github/workflows/build-test-release-deploy.yml
@@ -86,13 +86,18 @@ jobs:
     needs: [ build-and-test, terraform-check, codeql-check ]
     runs-on: ubuntu-latest
     environment: oskar-westmeijer-environment
-    if: ${{ github.actor == 'dependabot[bot]' && (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')}}
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - name: Dependabot metadata
         id: metadata
         uses: dependabot/fetch-metadata@v1.5.1
         with:
           github-token: '${{ secrets.GITHUB_TOKEN }}'
+      - name: approve PR
+        run: gh pr review --approve "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Enable auto-merge for Dependabot PRs
         run: gh pr merge --auto --squash "$PR_URL"
         env:
