--- a/.github/workflows/build-test-release-deploy.yml
+++ b/.github/workflows/build-test-release-deploy.yml
@@ -3,6 +3,11 @@ name: build-test-release-deploy
 on:
   push
 
+permissions:
+  pull-requests: write
+  issues: write
+  repository-projects: write
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -89,9 +94,10 @@ jobs:
     if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - uses: actions/checkout@v3
+      - run: echo "event name is:" ${{ github.event_name }}
+      - run: echo "event type is:" ${{ github.event.action }}
       - name: Dependabot metadata
-        id: metadata
-        uses: dependabot/fetch-metadata@v1.5.1
+        uses: dependabot/fetch-metadata@v1
         with:
           github-token: '${{ secrets.GITHUB_TOKEN }}'
       - name: approve PR
