test pipeline after pr merge

--- a/.github/workflows/build-test-release-deploy.yml
+++ b/.github/workflows/build-test-release-deploy.yml
@@ -1,14 +1,6 @@
 name: build-test-release-deploy
 
-on:
-  - push
-  - pull_request
-
-
-permissions:
-  pull-requests: write
-  contents: write
-  repository-projects: write
+on: [ push, pull_request ]
 
 jobs:
   build-and-test:
